# tag_aggregator

./: Cargo.toml
lib/: mod.rs  server.rs
libtag-aggregator/: Cargo.toml
libtag-aggregator/src/: dbus_client.rs  lib.rs  server.rs  ui.rs  utils.rs
macro-hack/: Cargo.toml
macro-hack/src/: lib.rs
main/: main.rs
server/: main.rs
src/: dbus.rs  lib.rs  main.rs  server.rs  ui.rs  utils.rs
tag-aggregator-client/: Cargo.toml
tag-aggregator-client/src/: main.rs  ui.rs
tag-aggregator-server/: Cargo.toml
tag-aggregator-server/src/: main.rs
