[package]
name = "tag-aggregator"
version = "0.1.0"
edition = "2018"

[dependencies]
libtag_aggregator = { path = "../libtag-aggregator" }

# HTTP
reqwest = "0.9.20"

# JSON serialization
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"

# IPC
dbus = "0.6.5"

# GUI
gtk = { version = "0.7.0", features = ["v3_16"] }
glib = "0.8.0"
gio = { version = "0.7.0", features = ["v2_44"] }
pango = "0.7.0"